# DD-Ranking

./: .gitignore  .pypirc  CONTRIBUTING.md  DM_hard.py  LICENSE  MANIFEST.in  README.md  book.toml  datm_cifar10_aug.py  datm_cifar10_obj.py  dc_cifar100_aug.py  dc_cifar100_obj.py  dc_cifar10_aug.py  dc_cifar10_obj.py  dc_obj.py  dc_tiny_aug.py  dc_tiny_obj.py  demo_hard.py  demo_soft.py  dm_cifar10_obj.py  dm_tiny_aug.py  dm_tiny_obj.py  process_dataset.py  pyproject.toml  setup.py  test_aug.py  test_obj.py
NCFM_eval/: NCFM_hard.py  NCFM_sl.py  config.py  decode.py  get_rank_score.py  run.sh  run_NCFM_script.py
NCFM_eval/models/: __init__.py  convnet.py  densenet_cifar.py  network.py  resnet.py  resnet_ap.py
aug/: dd_ranking_aug.py  dd_ranking_augmentations.py  utils.py
book/: 404.html  community.html  contributing.html  get-started.html  index.html  introduction.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
book/augmentations/: cutmix.html  dsa.html  mixup.html  overview.html
book/config/: overview.html
book/datasets/: overview.html
book/getting-started/: installation.html  quick-start.html
book/metrics/: general.html  hard-label.html  overview.html  soft-label.html
book/models/: alexnet.html  convnet.html  lenet.html  mlp.html  overview.html  resnet.html  vgg.html
book/theme/: book.css
configs/: DM_Hard_Label.yaml  Demo_Hard_Label.yaml  Demo_Soft_Label.yaml
dd_ranking/: __init__.py
dd_ranking/aug/: __init__.py  cutmix.py  (+3 more)
doc/: SUMMARY.md  community.md  contributing.md  get-started.md  introduction.md
results/: my_method_hard_label_scores.csv
teacher_models/: process.py
(+51 files in other folders)
