[build-system]
requires = [
    "setuptools",
    "wheel",
    "torch >= 2.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "dd_ranking"
version = "0.1.0"
description = "DD-Ranking: A unified benchmark for dataset distillation method evaluation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "numpy",
    "optuna",
    "torchvision",
    "tqdm",
    "scipy",
    "kornia",
    "timm"
]
